tests/baselines/reference/exportAssignmentWithPrivacyError.errors.txt
==== tests/cases/compiler/exportAssignmentWithPrivacyError.ts (2 errors) ====
    interface connectmodule {
        (res, req, next): void;
    }
    interface connectexport {
        use: (mod: connectmodule) => connectexport;
        listen: (port: number) => void;
    }
    
    var server: {
        ~~~~~~~~~
        ~~~~~~~~~
        (): connectexport;
    ~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~
        test1: connectmodule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~
        test2(): connectmodule;
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
    };
    ~
!!! exportAssignmentWithPrivacyError.ts(9,5): error TS2027: Exported variable 'server' has or is using private type 'connectmodule'.
    ~
!!! exportAssignmentWithPrivacyError.ts(9,5): error TS2027: Exported variable 'server' has or is using private type 'connectexport'.
    
    export = server;
    
    